--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <span style="color: rgb(0, 190, 0);">root@SJB</span>
                     <span style="color: blue;">~</span>
                     <span style="color: rgb(39, 39, 39);">cat ./我开发的开源项目.txt</span>
-                    <p>GlassWallpaper(一款基于VLC的高清动态壁纸程序): <a href="https://github.com/sjbsjb233/glass">Github链接</a><span> </span><a href="https://glass.sjbsjb.xyz/">官网网站</a></p>
+                    <p>GlassWallpaper(一款基于VLC的高清动态壁纸程序): <a href="https://github.com/sjbsjb233/GlassWallpaper">Github链接</a><span> </span><a href="https://glass.sjbsjb.xyz/">官网网站</a></p>
                     <p>TXT2IMG(一款基于StableDiffusion和ChatGPT的小说生成视频程序): <a href="https://github.com/sjbsjb233/text2video">Github链接</a></p>
                     <p></p>
 
