--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
                     <p>在我眼里</p>
                     <p>没有什么问题是尝试不能解决的，如果有那就多尝试几次甚至上百次</p>
                     <p>即使前方的路看似绝境，也要有硬生生给自己开出一条路的勇气</p>
+
+                    <span style="color: rgb(0, 190, 0);">root@SJB</span>
+                    <span style="color: blue;">~</span>
+                    <span style="color: rgb(39, 39, 39);">cat /我的座右铭.txt</span>
+                    <p>编程是一种艺术，代码是一种诗歌。</p>
                     <span style="color: rgb(0, 190, 0);">root@SJB</span>
                     <span style="color: blue;">~</span>
                     <span style="color: rgb(39, 39, 39);">sudo rm -rf /过去的自己/*</span>
@@ -108,17 +113,11 @@
                     <ul class="ul">
                         <li><a href="#">Python</a></li>
                         <ul class="ul">
-                            <li><a href="#">Django</a></li>
-                            <li><a href="#">Flask</a></li>
-                            <li><a href="#">pandas</a></li>
-                            <li><a href="#">PyQt5</a></li>
-                            <li><a href="#">numpy</a></li>
-                            <li><a href="#">Scrapy</a></li>
+                            <li><a href="#">Django,Flask,pandas,PyQt5,numpy,Scrapy 等等</a></li>
                         </ul>
-                        <li><a href="#">Linux(一个伟大的系统)</a></li>
-                        <li><a href="#">SQLite3,mysql(数据库)</a></li>
+                        <li><a href="#">Linux-CentOS(一个伟大的系统)</a></li>
+                        <li><a href="#">SQLite3,mysql(数据库),H5,CSS(前端套件)</a></li>
                         <li><a href="#">PS(图片处理工具),solidworks(3D建模,3D打印)</a></li>
-                        <li><a href="#">H5,CSS(前端套件)</a></li>
                         <li><a href="#">micro:bit,Raspberry Pi(物联网硬件)</a></li>
                     </ul>
                 </div>
