--- a/index.html
+++ b/index.html
@@ -111,14 +111,15 @@
                     <span style="color: blue;">~</span>
                     <span style="color: rgb(39, 39, 39);">cat ./我的技能(我会些什么).txt</span>
                     <ul class="ul">
-                        <li><a href="#">Python</a></li>
+                        <li><a href="https://www.python.org/">Python</a></li>
                         <ul class="ul">
-                            <li><a href="#">Django,Flask,pandas,PyQt5,numpy,Scrapy 等等</a></li>
+                            <li>Django,Flask,pandas,PyQt5,numpy,Scrapy ......</li>
                         </ul>
-                        <li><a href="#">Linux-CentOS(一个伟大的系统)</a></li>
-                        <li><a href="#">SQLite3,mysql(数据库),H5,CSS(前端套件)</a></li>
-                        <li><a href="#">PS(图片处理工具),solidworks(3D建模,3D打印)</a></li>
-                        <li><a href="#">micro:bit,Raspberry Pi(物联网硬件)</a></li>
+                        <li>Linux-CentOS(一个伟大的系统)</li>
+                        <li>SQLite3,mysql(数据库),H5,CSS(前端套件)</li>
+                        <li>PS(图片处理工具),solidworks(3D建模,3D打印)</li>
+                        <li>micro:bit,Raspberry Pi(物联网硬件)</li>
+                        <li>......</li>
                     </ul>
                 </div>
             </div>
