--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
     <meta charset="UTF-8">
@@ -28,7 +28,7 @@
             <div class="meBox-text">
                 <p>一条咸鱼<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>
                 <p>爱好MC，计算机</p>
-                <p>瞎折腾浪费时间最在行</p>
+                <p>折腾时间解决问题最在行</p>
                 <p>最爱<img src="./img/002.png" alt="冰激凌" style="width: 15px; vertical-align: middle;"></p>
             </div>
         </div>
