--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="fg"></div>
             </div>
             <div class="meBox-text">
-                <p>一条咸鱼<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>
+                <p>努力学习<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>
                 <p>爱好MC，计算机</p>
                 <p>折腾时间解决问题最在行</p>
                 <p>最爱<img src="./img/002.png" alt="冰激凌" style="width: 15px; vertical-align: middle;"></p>
